feat: Cài đặt module đăng nhập, người dùng và khách hàng

--- a/StoreManagement.Server/appsettings.json
+++ b/StoreManagement.Server/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StorageManagement": "server=localhost;uid=root;database=store_management" // Chuỗi kết nối CSDL
+    "StorageManagement": "server=localhost;uid=root;database=store_management"
+  },
+  "Jwt": {
+    "Issuer": "StoreManagement",
+    "Audience": "StoreManagementClients",
+    "Key": "product-secret-keyblahblahblahblah"
   }
 }
