--- a/StoreManagement.Server/appsettings.json
+++ b/StoreManagement.Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StorageManagement": "server=localhost;port=3306;uid=root;password=1234;database=store_management" 
+    "StorageManagement": "server=localhost;port=3306;uid=root;database=store_management" 
   },
   "Jwt": {
     "Issuer": "StoreManagement",
